--- a/chatty-lambda.cabal
+++ b/chatty-lambda.cabal
@@ -67,6 +67,7 @@ test-suite chatty-lambda-test
                      , chatty-lambda
                      , classy-prelude      >= 0.12    && <0.13
                      , hspec >= 2.1.7
+                     , unix
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
