Make receive and respond run forever
This is so that they will keep reading input over and over again.

--- a/chatty-lambda.cabal
+++ b/chatty-lambda.cabal
@@ -21,7 +21,6 @@ library
                      , async               >= 2.0     && <2.1
                      , classy-prelude      >= 0.12    && <0.13
                      , network             >= 2.3     && <2.7
-                     , servant             >= 0.4.4.0 && <0.4.5.0
                      , stm                 >= 2.4.2   && <2.5
                      , text                >= 1.2.1.0 && <1.2.2.0
                      , time
@@ -49,6 +48,7 @@ executable chatty-lambda-exe
                       NoImplicitPrelude
 
   build-depends:       base
+                     , async               >= 2.0     && <2.1
                      , chatty-lambda
                      , classy-prelude      >= 0.12    && <0.13
   default-language:    Haskell2010
@@ -62,6 +62,7 @@ test-suite chatty-lambda-test
                        NoImplicitPrelude
 
   build-depends:       base
+                     , async               >= 2.0     && <2.1
                      , HUnit
                      , QuickCheck
                      , chatty-lambda
