Allow multiple connected people to chat
* Allow users to echo commands to each other and test.
* First iteration on tests done

Next, I need to find a better way to signal the test that the network
connection is done setting up.

--- a/chatty-lambda.cabal
+++ b/chatty-lambda.cabal
@@ -66,6 +66,7 @@ test-suite chatty-lambda-test
                      , HUnit
                      , QuickCheck
                      , chatty-lambda
+                     , network             >= 2.3     && <2.7
                      , classy-prelude      >= 0.12    && <0.13
                      , hspec >= 2.1.7
                      , unix
