--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,5 @@
-sudo: false
+language: nix
 
-addons:
-  apt:
-    sources:
-    - hvr-ghc
-    packages:
-    - ghc-7.10.2
-    - libgmp-dev
+nix: 2.2.2
 
-before_install:
-  # stack
-  - mkdir -p ~/.local/bin
-  - export PATH=$HOME/.local/bin:/opt/ghc/7.8.4/bin:$PATH
-  - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v0.1.2.0/stack-0.1.2.0-x86_64-linux.gz | gunzip > ~/.local/bin/stack
-  - chmod a+x ~/.local/bin/stack
-
-install:
-  - stack --no-terminal --skip-ghc-check setup
-  - stack --no-terminal --skip-ghc-check test --only-snapshot
-
-script:
-  - stack +RTS -N2 -RTS --no-terminal build
-  - stack +RTS -N2 -RTS --no-terminal test
-
-cache:
-  directories:
-    - $HOME/.stack
+script: nix-build shell.nix
