--- a/chatty-lambda.cabal
+++ b/chatty-lambda.cabal
@@ -57,6 +57,7 @@ test-suite chatty-lambda-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       Chatty.LibSpec
 
   default-extensions:  OverloadedStrings
                        NoImplicitPrelude
